manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "cert-qq-frontend-tls"
    appgw.ingress.kubernetes.io/backend-hostname: "backend" 
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backendroot"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: website-service
                port:
                  number: 8443
            pathType: Exact
